# zkauth_solana

./: .gitmodules  README.md  docker-compose.yaml
t_bot/: Dockerfile  example.env  pyproject.toml
t_bot/src/: main.py  settings.py
